--- a/style.css
+++ b/style.css
@@ -174,6 +174,11 @@ footer {
 .gallery img:hover {
   transform: scale(1.05);
 }
+.resized-img {
+  width: 300px;
+  height: auto;
+  border-radius: 10px;
+}
 
 
 
