--- a/style.css
+++ b/style.css
@@ -132,13 +132,13 @@ footer {
 }
 .slider-img {
     width: 100%;
-    max-height: 300px;
+    max-height: 200px;
     object-fit: cover;
     border-radius: 10px;
 }
 .slide {
   width: 100%;
-  height: auto;
+  height: 50%;
   flex-shrink: 0;
   object-fit: cover;
   border-radius: 12px;
@@ -172,11 +172,12 @@ footer {
 
 .gallery img {
   width: 300px;
-  height: auto;
+  height: 200px;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0,0,0,0.2);
   transition: transform 0.10s ease;
 }
+
 
 
 
