--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 
 /* Header */
 header {
-  background-color: #f0f8ff;
+  background-color: #333;
   color: white;
   padding: 2rem;
   text-align: right;
